# funcversion

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: workflow.yml
examples/: async_test.py  class_based.py  greeting.py  inheritence.py
funcversion/: __init__.py  core.py  exceptions.py  version.py
tests/: test_core.py
