[metadata]
name = funcversion
version = 0.1.32
author = Pizzaface
description = A Python library for managing multiple versions of functions using decorators.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pizzaface/funcversion
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.11
include_package_data = True

[options.package_data]
funcversion = py.typed